src/parser/cbuildParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { cbuildListener } from "./cbuildListener.js";
import { cbuildVisitor } from "./cbuildVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class cbuildParser extends antlr.Parser {
    public static readonly ASSIGN_OP = 1;
    public static readonly DOLLAR_LPAREN = 2;
    public static readonly DOLLAR_L_CURLY_BRACE = 3;
    public static readonly VAR = 4;
    public static readonly DOUBLE_DOLLAR = 5;
    public static readonly GROUPED_DOUBLE_COLON = 6;
    public static readonly GROUPED_COLON = 7;
    public static readonly DOUBLE_COLON = 8;
    public static readonly COLON = 9;
    public static readonly LPAREN = 10;
    public static readonly RPAREN = 11;
    public static readonly L_CURLY_BRACE = 12;
    public static readonly R_CURLY_BRACE = 13;
    public static readonly COMMA = 14;
    public static readonly PIPE = 15;
    public static readonly BACKSLASH = 16;
    public static readonly PLUS = 17;
    public static readonly QUESTION = 18;
    public static readonly BANG = 19;
    public static readonly INCLUDE = 20;
    public static readonly DASH_INCLUDE = 21;
    public static readonly SINCLUDE = 22;
    public static readonly ENDEF = 23;
    public static readonly IFDEF = 24;
    public static readonly IFNDEF = 25;
    public static readonly IFEQ = 26;
    public static readonly IFNEQ = 27;
    public static readonly ELSE = 28;
    public static readonly ENDIF = 29;
    public static readonly OVERRIDE = 30;
    public static readonly EXPORT = 31;
    public static readonly UNEXPORT = 32;
    public static readonly UNDEFINE = 33;
    public static readonly DEFINE = 34;
    public static readonly VPATH = 35;
    public static readonly HOOK = 36;
    public static readonly CHARS = 37;
    public static readonly NL = 38;
    public static readonly LEADING_TAB = 39;
    public static readonly WS = 40;
    public static readonly TAB = 41;
    public static readonly COMMENT = 42;
    public static readonly RULE_cbuildfile = 0;
    public static readonly RULE_statements = 1;
    public static readonly RULE_conditional = 2;
    public static readonly RULE_conditional_in_recipe = 3;
    public static readonly RULE_statements_opt = 4;
    public static readonly RULE_statement = 5;
    public static readonly RULE_define = 6;
    public static readonly RULE_define_body = 7;
    public static readonly RULE_definition = 8;
    public static readonly RULE_include = 9;
    public static readonly RULE_export = 10;
    public static readonly RULE_vpath = 11;
    public static readonly RULE_vpath_args = 12;
    public static readonly RULE_assignment = 13;
    public static readonly RULE_assignment_prefix = 14;
    public static readonly RULE_if_eq_kw = 15;
    public static readonly RULE_if_def_kw = 16;
    public static readonly RULE_include_kw = 17;
    public static readonly RULE_condition = 18;
    public static readonly RULE_expressions_opt = 19;
    public static readonly RULE_expressions = 20;
    public static readonly RULE_exprs_nested = 21;
    public static readonly RULE_exprs_in_assign = 22;
    public static readonly RULE_exprs_in_recipe = 23;
    public static readonly RULE_exprs_in_def = 24;
    public static readonly RULE_first_expr_in_def = 25;
    public static readonly RULE_expression = 26;
    public static readonly RULE_expression_atom = 27;
    public static readonly RULE_expr_nested = 28;
    public static readonly RULE_expr_nested_atom = 29;
    public static readonly RULE_expr_in_assign = 30;
    public static readonly RULE_expr_in_assign_atom = 31;
    public static readonly RULE_expr_in_recipe = 32;
    public static readonly RULE_expr_in_recipe_atom = 33;
    public static readonly RULE_function = 34;
    public static readonly RULE_function_name = 35;
    public static readonly RULE_function_name_atom = 36;
    public static readonly RULE_arguments = 37;
    public static readonly RULE_argument = 38;
    public static readonly RULE_rule = 39;
    public static readonly RULE_static_pattern_rule = 40;
    public static readonly RULE_target = 41;
    public static readonly RULE_pattern = 42;
    public static readonly RULE_prerequisites = 43;
    public static readonly RULE_orderonlyprerequisites = 44;
    public static readonly RULE_targets = 45;
    public static readonly RULE_recipes = 46;
    public static readonly RULE_recipes_opt = 47;
    public static readonly RULE_recipe = 48;
    public static readonly RULE_undefine = 49;
    public static readonly RULE_specifiers = 50;
    public static readonly RULE_identifier = 51;
    public static readonly RULE_identifier_atom = 52;
    public static readonly RULE_br = 53;
    public static readonly RULE_char = 54;
    public static readonly RULE_char_nested = 55;
    public static readonly RULE_char_in_assign = 56;
    public static readonly RULE_char_in_def = 57;
    public static readonly RULE_char_in_recipe = 58;
    public static readonly RULE_text = 59;
    public static readonly RULE_text_nested = 60;
    public static readonly RULE_text_in_assign = 61;
    public static readonly RULE_text_in_recipe = 62;
    public static readonly RULE_keywords = 63;
    public static readonly RULE_colon = 64;
    public static readonly RULE_comment_opt = 65;
    public static readonly RULE_ws = 66;
    public static readonly RULE_hook = 67;
    public static readonly RULE_hook_program = 68;

    public static readonly literalNames = [
        null, null, "'$('", "'${'", null, "'$$'", "'&::'", "'&:'", "'::'", 
        "':'", "'('", "')'", "'{'", "'}'", "','", "'|'", "'\\'", "'+'", 
        "'?'", "'!'", "'include'", "'-include'", "'sinclude'", "'endef'", 
        "'ifdef'", "'ifndef'", "'ifeq'", "'ifneq'", "'else'", "'endif'", 
        "'override'", "'export'", "'unexport'", "'undefine'", "'define'", 
        "'vpath'", "'hook'", null, null, null, null, "'\\t'"
    ];

    public static readonly symbolicNames = [
        null, "ASSIGN_OP", "DOLLAR_LPAREN", "DOLLAR_L_CURLY_BRACE", "VAR", 
        "DOUBLE_DOLLAR", "GROUPED_DOUBLE_COLON", "GROUPED_COLON", "DOUBLE_COLON", 
        "COLON", "LPAREN", "RPAREN", "L_CURLY_BRACE", "R_CURLY_BRACE", "COMMA", 
        "PIPE", "BACKSLASH", "PLUS", "QUESTION", "BANG", "INCLUDE", "DASH_INCLUDE", 
        "SINCLUDE", "ENDEF", "IFDEF", "IFNDEF", "IFEQ", "IFNEQ", "ELSE", 
        "ENDIF", "OVERRIDE", "EXPORT", "UNEXPORT", "UNDEFINE", "DEFINE", 
        "VPATH", "HOOK", "CHARS", "NL", "LEADING_TAB", "WS", "TAB", "COMMENT"
    ];
    public static readonly ruleNames = [
        "cbuildfile", "statements", "conditional", "conditional_in_recipe", 
        "statements_opt", "statement", "define", "define_body", "definition", 
        "include", "export", "vpath", "vpath_args", "assignment", "assignment_prefix", 
        "if_eq_kw", "if_def_kw", "include_kw", "condition", "expressions_opt", 
        "expressions", "exprs_nested", "exprs_in_assign", "exprs_in_recipe", 
        "exprs_in_def", "first_expr_in_def", "expression", "expression_atom", 
        "expr_nested", "expr_nested_atom", "expr_in_assign", "expr_in_assign_atom", 
        "expr_in_recipe", "expr_in_recipe_atom", "function", "function_name", 
        "function_name_atom", "arguments", "argument", "rule", "static_pattern_rule", 
        "target", "pattern", "prerequisites", "orderonlyprerequisites", 
        "targets", "recipes", "recipes_opt", "recipe", "undefine", "specifiers", 
        "identifier", "identifier_atom", "br", "char", "char_nested", "char_in_assign", 
        "char_in_def", "char_in_recipe", "text", "text_nested", "text_in_assign", 
        "text_in_recipe", "keywords", "colon", "comment_opt", "ws", "hook", 
        "hook_program",
    ];

    public get grammarFileName(): string { return "cbuild.g4"; }
    public get literalNames(): (string | null)[] { return cbuildParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return cbuildParser.symbolicNames; }
    public get ruleNames(): string[] { return cbuildParser.ruleNames; }
    public get serializedATN(): number[] { return cbuildParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, cbuildParser._ATN, cbuildParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public cbuildfile(): CbuildfileContext {
        let localContext = new CbuildfileContext(this.context, this.state);
        this.enterRule(localContext, 0, cbuildParser.RULE_cbuildfile);
        try {
            this.state = 142;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 0, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 138;
                this.statements();
                this.state = 139;
                this.match(cbuildParser.EOF);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 141;
                this.match(cbuildParser.EOF);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statements(): StatementsContext {
        let localContext = new StatementsContext(this.context, this.state);
        this.enterRule(localContext, 2, cbuildParser.RULE_statements);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 149;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    this.state = 147;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
                    case 1:
                        {
                        this.state = 144;
                        this.statement();
                        }
                        break;
                    case 2:
                        {
                        this.state = 145;
                        this.br();
                        }
                        break;
                    case 3:
                        {
                        this.state = 146;
                        this.ws();
                        }
                        break;
                    }
                    }
                }
                this.state = 151;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conditional(): ConditionalContext {
        let localContext = new ConditionalContext(this.context, this.state);
        this.enterRule(localContext, 4, cbuildParser.RULE_conditional);
        let _la: number;
        try {
            this.state = 274;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 29, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 152;
                this.if_eq_kw();
                this.state = 154;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 153;
                    this.ws();
                    }
                }

                this.state = 156;
                this.condition();
                this.state = 158;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 157;
                    this.ws();
                    }
                }

                this.state = 160;
                this.statements_opt();
                this.state = 162;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 161;
                    this.ws();
                    }
                }

                this.state = 164;
                this.match(cbuildParser.ENDIF);
                this.state = 166;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 165;
                    this.ws();
                    }
                }

                this.state = 168;
                this.comment_opt();
                this.state = 169;
                this.br();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 171;
                this.if_eq_kw();
                this.state = 173;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 172;
                    this.ws();
                    }
                }

                this.state = 175;
                this.condition();
                this.state = 177;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 176;
                    this.ws();
                    }
                }

                this.state = 179;
                this.statements_opt();
                this.state = 181;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 180;
                    this.ws();
                    }
                }

                this.state = 183;
                this.match(cbuildParser.ELSE);
                this.state = 185;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 184;
                    this.ws();
                    }
                }

                this.state = 187;
                this.statements_opt();
                this.state = 189;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 188;
                    this.ws();
                    }
                }

                this.state = 191;
                this.match(cbuildParser.ENDIF);
                this.state = 192;
                this.comment_opt();
                this.state = 193;
                this.br();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 195;
                this.if_eq_kw();
                this.state = 197;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 196;
                    this.ws();
                    }
                }

                this.state = 199;
                this.condition();
                this.state = 201;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 200;
                    this.ws();
                    }
                }

                this.state = 203;
                this.statements_opt();
                this.state = 205;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 204;
                    this.ws();
                    }
                }

                this.state = 207;
                this.match(cbuildParser.ELSE);
                this.state = 209;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 208;
                    this.ws();
                    }
                }

                this.state = 211;
                this.conditional();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 213;
                this.if_def_kw();
                this.state = 215;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 214;
                    this.ws();
                    }
                }

                this.state = 217;
                this.pattern();
                this.state = 219;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 218;
                    this.ws();
                    }
                }

                this.state = 221;
                this.statements_opt();
                this.state = 223;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 222;
                    this.ws();
                    }
                }

                this.state = 225;
                this.match(cbuildParser.ENDIF);
                this.state = 227;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 226;
                    this.ws();
                    }
                }

                this.state = 229;
                this.comment_opt();
                this.state = 230;
                this.br();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 232;
                this.if_def_kw();
                this.state = 234;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 233;
                    this.ws();
                    }
                }

                this.state = 236;
                this.pattern();
                this.state = 238;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 237;
                    this.ws();
                    }
                }

                this.state = 240;
                this.statements_opt();
                this.state = 242;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 241;
                    this.ws();
                    }
                }

                this.state = 244;
                this.match(cbuildParser.ELSE);
                this.state = 246;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 245;
                    this.ws();
                    }
                }

                this.state = 248;
                this.statements_opt();
                this.state = 250;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 249;
                    this.ws();
                    }
                }

                this.state = 252;
                this.match(cbuildParser.ENDIF);
                this.state = 253;
                this.comment_opt();
                this.state = 254;
                this.br();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 256;
                this.if_def_kw();
                this.state = 258;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 257;
                    this.ws();
                    }
                }

                this.state = 260;
                this.pattern();
                this.state = 262;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 261;
                    this.ws();
                    }
                }

                this.state = 264;
                this.statements_opt();
                this.state = 266;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 265;
                    this.ws();
                    }
                }

                this.state = 268;
                this.match(cbuildParser.ELSE);
                this.state = 270;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 269;
                    this.ws();
                    }
                }

                this.state = 272;
                this.conditional();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conditional_in_recipe(): Conditional_in_recipeContext {
        let localContext = new Conditional_in_recipeContext(this.context, this.state);
        this.enterRule(localContext, 6, cbuildParser.RULE_conditional_in_recipe);
        let _la: number;
        try {
            this.state = 344;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 36, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 276;
                this.if_eq_kw();
                this.state = 278;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 277;
                    this.ws();
                    }
                }

                this.state = 280;
                this.condition();
                this.state = 281;
                this.match(cbuildParser.NL);
                this.state = 282;
                this.recipes_opt();
                this.state = 283;
                this.match(cbuildParser.ENDIF);
                this.state = 284;
                this.comment_opt();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 286;
                this.if_eq_kw();
                this.state = 288;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 287;
                    this.ws();
                    }
                }

                this.state = 290;
                this.condition();
                this.state = 291;
                this.match(cbuildParser.NL);
                this.state = 292;
                this.recipes_opt();
                this.state = 293;
                this.match(cbuildParser.ELSE);
                this.state = 294;
                this.match(cbuildParser.NL);
                this.state = 295;
                this.recipes_opt();
                this.state = 296;
                this.match(cbuildParser.ENDIF);
                this.state = 297;
                this.comment_opt();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 299;
                this.if_eq_kw();
                this.state = 301;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 300;
                    this.ws();
                    }
                }

                this.state = 303;
                this.condition();
                this.state = 304;
                this.match(cbuildParser.NL);
                this.state = 305;
                this.recipes_opt();
                this.state = 306;
                this.match(cbuildParser.ELSE);
                this.state = 307;
                this.match(cbuildParser.NL);
                this.state = 308;
                this.conditional_in_recipe();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 310;
                this.if_def_kw();
                this.state = 312;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 311;
                    this.ws();
                    }
                }

                this.state = 314;
                this.pattern();
                this.state = 315;
                this.match(cbuildParser.NL);
                this.state = 316;
                this.recipes_opt();
                this.state = 317;
                this.match(cbuildParser.ENDIF);
                this.state = 318;
                this.comment_opt();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 320;
                this.if_def_kw();
                this.state = 322;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 321;
                    this.ws();
                    }
                }

                this.state = 324;
                this.pattern();
                this.state = 325;
                this.match(cbuildParser.NL);
                this.state = 326;
                this.recipes_opt();
                this.state = 327;
                this.match(cbuildParser.ELSE);
                this.state = 328;
                this.match(cbuildParser.NL);
                this.state = 329;
                this.recipes_opt();
                this.state = 330;
                this.match(cbuildParser.ENDIF);
                this.state = 331;
                this.comment_opt();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 333;
                this.if_def_kw();
                this.state = 335;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 334;
                    this.ws();
                    }
                }

                this.state = 337;
                this.pattern();
                this.state = 338;
                this.match(cbuildParser.NL);
                this.state = 339;
                this.recipes_opt();
                this.state = 340;
                this.match(cbuildParser.ELSE);
                this.state = 341;
                this.match(cbuildParser.NL);
                this.state = 342;
                this.conditional_in_recipe();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statements_opt(): Statements_optContext {
        let localContext = new Statements_optContext(this.context, this.state);
        this.enterRule(localContext, 8, cbuildParser.RULE_statements_opt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 346;
            this.comment_opt();
            this.state = 347;
            this.br();
            this.state = 348;
            this.statements();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 10, cbuildParser.RULE_statement);
        let _la: number;
        try {
            this.state = 400;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 48, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 351;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 40 || _la === 41) {
                    {
                    this.state = 350;
                    this.ws();
                    }
                }
